[tool.poetry]
name = "tdd project"
version = "0.0.1"
description = ""
authors = ["Nayanna Nara <nayanna501@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
pydantic = "^2.6.0"
pydantic-settings = "^2.1.0"
motor = "^3.3.2"
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pre-commit = "^3.6.0"
httpx = "^0.26.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = [
  "--strict-config",
  "--strict-markers",
  "--ignore=docs_src",
]
xfail_strict = true
junit_family = "xunit2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
